--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "homepage": "https://github.com/DonatoRM/ramos_martinez_donato_DIW06_Tarea#readme",
     "devDependencies": {
         "sass": "^1.60.0"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.4.0"
     }
 }
